--- a/src/app/curriculum/curriculum.component.html
+++ b/src/app/curriculum/curriculum.component.html
@@ -1,5 +1,3 @@
-<p>curriculum works!</p>
-
 <div class="card">
   <div class="card-header">
     {{pageTitle}}
@@ -7,11 +5,18 @@
 
   <div class="card-body"
        *ngIf="curriculums$ | async as curriculums">
+
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-3">
-          <select class="form-control">
-            <option value="0">- Display All -</option>
+          <select class="form-control" [(ngModel)]="selectedOption"
+                  (change)="onSelected()">
+            <option value="All">- Display All -</option>
+            <option value="Education">Education</option>
+            <option value="Employment">Employment</option>
+            <option value="Entrepreneurship">Entrepreneurship</option>
+            <option value="Other">Other</option>
+
           </select>
         </div>
         <div class="col-2">
@@ -28,21 +33,22 @@
         <thead>
         <tr>
           <th>Category</th>
-          <th>School Name</th>
-          <th>Curse Name</th>
-          <th>City</th>
-          <th>Grade</th>
+          <th>Where</th>
+          <th>Title</th>
+          <th>Period</th>
         </tr>
         </thead>
         <tbody *ngFor="let curriculum of curriculums">
         <tr>
           <td>{{ curriculum.category }}</td>
-          <td>{{ curriculum.id }}</td>
-          <td>{{ curriculum.id }}</td>
-          <td>{{ curriculum.id  }}</td>
-          <td>{{ curriculum.id }}</td>
+          <td>{{ curriculum.institution }}</td>
+          <td>{{ curriculum.title }}</td>
+          <td>{{ curriculum.period  }}</td>
           <td>
-            <button type="button" class="btn btn-outline-warning" (click)="detailCV(curriculum.id)">Detail</button>
+            <button class="btn btn-primary"
+               [routerLink]="['/cv', curriculum.id]">
+              Detail
+            </button>
           </td>
         </tr>
         </tbody>
